@@ -1,3 +1,11 @@
+2023-11-10 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* .version,
+	  doc/sdccman.lyx,
+	  src/mcs51/gen.c,
+	  src/mcs51/main.c:
+	  Remove --parms-in-bank1 support in mcs51 port.
+
 2023-11-00 Felix Salfelder <felix AT salfelder.org>
 
 	* support/cpp/gcc/cc1_dummies.cc:
